<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_a"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="Enter first number"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_b"
        app:layout_constraintTop_toBottomOf="@id/et_a"
        android:hint="Enter second number"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_b"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/add_btn"
        android:text="@string/add">
    </Button>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_b"
        app:layout_constraintStart_toEndOf="@id/add_btn"
        android:id="@+id/sub_btn"
        android:text="@string/subtract">
    </Button>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_b"
        app:layout_constraintStart_toEndOf="@id/sub_btn"
        android:id="@+id/mul_btn"
        android:text="@string/multiply">
    </Button>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_b"
        app:layout_constraintStart_toEndOf="@id/mul_btn"
        android:id="@+id/div_btn"
        android:text="@string/divide">
    </Button>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resultTV"
        android:text="@string/result"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/add_btn">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/oeTV"
        android:text="@string/odd_even"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/resultTV">
    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>